Reverted Main back so working is not live on internet

--- a/index.html
+++ b/index.html
@@ -1,39 +1,10 @@
 <!DOCTYPE html>
-<html> 
-  <!-- ---------------------------------------------------------------------------- -->
-  <!-- ------------------------------------Head------------------------------------ -->
-  <!-- ---------------------------------------------------------------------------- -->
-  <head>
-    <!-- Link to the external stylesheet -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-
-  <!-- ---------------------------------------------------------------------------- -->
-  <!-- ------------------------------------Body------------------------------------ -->
-  <!-- ---------------------------------------------------------------------------- -->
-
-  <body>
-    <!-- ~~~~~~~~~~~Video~~~~~~~~~~~ -->
-    <video autoplay muted loop>
-      <source src="media/SpaceMarineVRHighlightsVideo.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-
-    <!-- ~~~~~~~~~~~Header~~~~~~~~~~~ -->
-    <div class = "header">
-      <div class = "title">Evan Gray</div>
-      <div class = "buttons">
-        <button class = "button" onclick = "window.location.href = 'resume.html'">Resume</button>
-        <button class= " button" onclick = "window.location.href = 'code_samples.html'">Code Samples</button>
-      </div>
-    </div>
-
-    <!-- ~~~~~~~~~~~Content~~~~~~~~~~~ -->
-    <div class="content">
-      <h2>Welcome to My Website</h2>
-      <p>This is an example of a webpage with a fixed header and scrollable content.</p>
-      <p>Scroll down to see more content.</p>
-    </div>
-  </body>
-
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "0; url = https://www.linkedin.com/in/evanpatrickgray" />
+   </head>
+   <body>
+      <p>Redirecting to another URL</p>
+   </body>
 </html>
