--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class = "buttons">
         <button class= " button" onclick = "window.location.href = 'index.html'">Projects</button>
-        <button class= " button" onclick = "window.location.href = 'Resume.html'">Resume</button>
+        <button class= " button" onclick = "window.location.href = 'resume/'">Resume</button>
         <button class= " button" onclick = "window.location.href = 'CodeSamples.html'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
       </div>
