--- a/resume/index.html
+++ b/resume/index.html
@@ -8,13 +8,13 @@
   <!-- ---------------------------------------------------------------------------- -->
   <head>
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="resumeStyles.css">
-    <link rel="stylesheet" type="text/css" href="headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="fonts.css">
+    <link rel="stylesheet" type="text/css" href="../resumeStyles.css">
+    <link rel="stylesheet" type="text/css" href="../headerStyles.css">
+    <link rel="stylesheet" type="text/css" href="../footerStyles.css">
+    <link rel="stylesheet" type="text/css" href="../fonts.css">
 
     <!-- Connect javascript functions -->
-    <script type="text/javascript" src="functions.js"></script>
+    <script type="text/javascript" src="../functions.js"></script>
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -29,7 +29,7 @@
       </div>
       <div class = "buttons">
         <button class= " button" onclick = "window.location.href = 'index.html'">Projects</button>
-        <button class= " button" onclick = "window.location.href = 'resume/'">Resume</button>
+        <button class= " button" onclick = "window.location.href = 'resume/index.html'">Resume</button>
         <button class= " button" onclick = "window.location.href = 'CodeSamples.html'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
       </div>
@@ -38,7 +38,7 @@
     <!-- ~~~~~~~~~~~Resume~~~~~~~~~~~ -->
 
     <div class = "resume">
-      <iframe src="media/EvanGrayResume.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
+      <iframe src="../media/EvanGrayResume.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
     </div>
 
 
@@ -50,7 +50,7 @@
         <p>evanpgray.work@gmail.com</p>
       </div>
       <div class = "links">
-        <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="media/LinkedInLogo.png" alt="LinkedIn Logo" /> </a>
+        <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo" /> </a>
         <!-- <a href="https://thecabbageknight.itch.io/" target="_blank" rel="noopener noreferrer"> <img src="media/ItchLogo.png" alt="Itch Logo" /> </a> -->
     </div>
   </body>
