--- a/resume/index.html
+++ b/resume/index.html
@@ -28,8 +28,8 @@
         Evan Gray       
       </div>
       <div class = "buttons">
-        <button class= " button" onclick = "window.location.href = 'index.html'">Projects</button>
-        <button class= " button" onclick = "window.location.href = 'resume/index.html'">Resume</button>
+        <button class= " button" onclick = "window.location.href = '../index.html'">Projects</button>
+        <button class= " button" onclick = "window.location.href = 'index.html'">Resume</button>
         <button class= " button" onclick = "window.location.href = 'CodeSamples.html'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
       </div>
