--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class = "videoContainer">
       <div class = "video">
         <video autoplay muted loop>
-          <source src="https://github.com/ChumaDaCabbage/chumadacabbage.github.io/raw/refs/heads/main/media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
+          <source src="media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
       </div>
