Added icons to contact info and contact info heighlight

--- a/resume/index.html
+++ b/resume/index.html
@@ -32,6 +32,7 @@
         <button class= " button" onclick = "location.reload()">Resume</button>
         <button class= " button" onclick = "window.location.href = 'CodeSamples.html'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
+        <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
     </div>
 
@@ -46,8 +47,15 @@
     <hr class="footerLine" style = "width: 100%; margin: 0 auto;">
 
     <div class = "footer">
-      <div class = "text">
-        <p>evanpgray.work@gmail.com</p>
+      <div class = "contactInfo">
+        <img src="../media/EmailIcon.png" alt="Email" style="width: 5%; border: none;"/>
+        <div class = "text">
+          <p>evanpgray.work@gmail.com &emsp; </p>
+        </div>
+        <img src="../media/PhoneIcon.png" alt="Phone" style="width: 4.5%; border: none;"/>
+        <div class = "text">
+          <p>+1 (425) 213-7629</p>
+        </div>
       </div>
       <div class = "links">
         <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo" /> </a>
