Forgot to add new footer to resume page

--- a/resume/index.html
+++ b/resume/index.html
@@ -48,13 +48,13 @@
 
     <div class = "footer">
       <div class = "contactInfo">
-        <img src="../media/EmailIcon.png" alt="Email" style="width: 5%; border: none;"/>
-        <div class = "text">
-          <p>evanpgray.work@gmail.com &emsp; </p>
+        <div class = "item">
+          <img src="../media/EmailIcon.png" alt="Email" style="width: 10%; border: none;"/>
+          <p>&ensp;evanpgray.work@gmail.com &emsp; </p>
         </div>
-        <img src="../media/PhoneIcon.png" alt="Phone" style="width: 4.5%; border: none;"/>
-        <div class = "text">
-          <p>+1 (425) 213-7629</p>
+        <div class = "item">
+          <img src="../media/PhoneIcon.png" alt="Phone" style="width: 14%; border: none;"/>
+          <p>&ensp;+1 (425) 213-7629</p>
         </div>
       </div>
       <div class = "links">
