Started code samples page and syntax highlighting through google prettify

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class = "buttons">
         <button class= " button" onclick = "location.reload()">Projects</button>
         <button class= " button" onclick = "window.location.href = 'resume/'">Resume</button>
-        <button class= " button" onclick = "window.location.href = 'CodeSamples.html'">Code Samples</button>
+        <button class= " button" onclick = "window.location.href = 'CodeSamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
@@ -41,7 +41,6 @@
       <div class = "video">
         <video autoplay muted loop>
           <source src="media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
         </video>
       </div>
       
