--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class = "buttons">
         <button class= " button" onclick = "location.reload()">Projects</button>
-        <button class= " button" onclick = "window.location.href = 'resume/'">Resume</button>
+        <button class= " button" onclick = "window.location.href = 'Resume/'">Resume</button>
         <button class= " button" onclick = "window.location.href = 'CodeSamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
