--- a/codeSamples/index.html
+++ b/codeSamples/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class = "buttons">
         <button class= " button" onclick = "window.location.href = '../'">Projects</button>
-        <button class= " button" onclick = "window.location.href = '../Resume/'">Resume</button>
+        <button class= " button" onclick = "window.location.href = '../resume/'">Resume</button>
         <button class= " button" onclick = "location.reload()">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
