--- a/resume/index.html
+++ b/resume/index.html
@@ -30,7 +30,7 @@
       <div class = "buttons">
         <button class= " button" onclick = "window.location.href = '../'">Projects</button>
         <button class= " button" onclick = "location.reload()">Resume</button>
-        <button class= " button" onclick = "window.location.href = '../CodeSamples/'">Code Samples</button>
+        <button class= " button" onclick = "window.location.href = '../codesamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
