--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <!-- ------------------------------------Head------------------------------------ -->
   <!-- ---------------------------------------------------------------------------- -->
   <head>
+    <title>Evan Gray | Projects</title>
+
     <!-- Link to the external stylesheets -->
     <link rel="stylesheet" type="text/css" href="projectsStyles.css">
     <link rel="stylesheet" type="text/css" href="headerStyles.css">
     <link rel="stylesheet" type="text/css" href="footerStyles.css">
     <link rel="stylesheet" type="text/css" href="fonts.css">
     
+    <!-- Set icon -->
+    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
+
     <!-- Connect javascript functions -->
     <script type="text/javascript" src="functions.js"></script>
   </head>
@@ -68,7 +73,7 @@
       <div class = "contactInfo">
         <div class = "item">
           <img src="../media/EmailIcon.png" alt="Email" style="width: 10%; border: none;"/>
-          <p>&ensp;evanpgray.work@gmail.com &emsp; </p>
+          <p>&ensp;<a href="mailto:evanpgray.work@gmail.com" style="text-decoration: none; color: inherit;">evanpgray.work@gmail.com</a>&emsp;</p>
         </div>
         <div class = "item">
           <img src="../media/PhoneIcon.png" alt="Phone" style="width: 14%; border: none;"/>
