--- a/codesamples/index.html
+++ b/codesamples/index.html
@@ -41,7 +41,7 @@
         <button class= " button" onclick = "window.location.href = '../'">Projects</button>
         <button class= " button" onclick = "window.location.href = '../resume/'">Resume</button>
         <button class= " button" onclick = "location.reload()">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
+        <button class= " button" onclick = "window.location.href = '../about/'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
     </div>
