--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
         <button class= " button" onclick = "window.location.href = '../'">Projects</button>
         <button class= " button" onclick = "location.reload()">Resume</button>
         <button class= " button" onclick = "window.location.href = '../codesamples/'">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = 'About.html'">About</button>
+        <button class= " button" onclick = "window.location.href = '../about/'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
     </div>
