Fixed spelling mistake and removed duplicate prettify call

--- a/codesamples/index.html
+++ b/codesamples/index.html
@@ -24,9 +24,8 @@
     <!-- Link to the google code-prettify library styles -->
     <script type="text/javascript" src="../googlePrettify/prettify.js"></script>
 
-    <!-- Load the code snippet on page load and run prettify on it-->
+    <!-- Load code snippets on page load and run prettify on them -->
     <script> window.onload = loadCode; </script>
-
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -57,7 +56,7 @@
       <h1>Overlapping Rectangles</h1>
     </div>
     <div class = "codeSnippet" id="codeSnippet">
-      <div class = "codeLoadingZone" id="overlappSnippet">
+      <div class = "codeLoadingZone" id="overlapSnippet">
         <!-- Code snippet will get autoloaded here :D -->
       </div>
       <div class = "codeDescription">
@@ -110,9 +109,5 @@
         <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo" /> </a>
         <!-- <a href="https://thecabbageknight.itch.io/" target="_blank" rel="noopener noreferrer"> <img src="media/ItchLogo.png" alt="Itch Logo" /> </a> -->
     </div>
-
-    <!-- Run Google Prettify-->
-    <script> PR.prettyPrint() </script>
   </body>
-
 </html>
