--- a/codesamples/index.html
+++ b/codesamples/index.html
@@ -24,8 +24,14 @@
     <!-- Link to the google code-prettify library styles -->
     <script type="text/javascript" src="../googlePrettify/prettify.js"></script>
 
-    <!-- Load code snippets on page load and run prettify on them -->
-    <script> window.onload = loadCode; </script>
+    <!-- Load footer into this file-->
+    <!-- Also Load code snippets on page load and run prettify on them -->
+    <script> window.onload = function() 
+             {
+               loadCode('overlap.cpp');
+               loadHTML('../footer.html');
+             }; 
+    </script>
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -51,12 +57,12 @@
 
     <!-- ~~~~~~~~~~~Code Samples~~~~~~~~~~~ -->
 
-    <hr style = "width: 100%; margin: 0 0; margin-top: calc(3.25vw + 2.25vh)">
+    <hr style = "width: 100%; margin: 0 0; margin-top: calc(3.25vw + 2.25vh); border: 0.01vw solid white;;">
     <div class = "codeTitle">
       <h1>Overlapping Rectangles</h1>
     </div>
     <div class = "codeSnippet" id="codeSnippet">
-      <div class = "codeLoadingZone" id="overlapSnippet">
+      <div class = "codeLoadingZone" id="overlap.cpp">
         <!-- Code snippet will get autoloaded here :D -->
       </div>
       <div class = "codeDescription">
@@ -78,7 +84,7 @@
 <p>Tracking Overlaps:</p>
 <div class="insetDeep"><p>A data structure called <code>LineData</code> keeps track of the number of overlaps at each x-coordinate using a vector. Additionally, it uses a hash map to count how many x-coordinates share the same overlap value (e.g., "10 x-coordinates have an overlap count of 1").</p></div>
 <p>Processing Events:</p>
-<div class="insetDeep"><ul><li>For a start event, the overlap count for all x-coordinates in the range [<code>x₁, x₂</code>] is incremented.</li>
+<div><ul><li>For a start event, the overlap count for all x-coordinates in the range [<code>x₁, x₂</code>] is incremented.</li>
 <li>For an end event, the overlap count for the same range is decremented.</li>
 <li>After adjusting overlap counts, the hash map is updated to reflect the new distribution of overlap counts.</li></ul></div> 
 <p>Calculating Area Contributions:</p>
@@ -92,22 +98,8 @@
     </div>
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <hr class="footerLine" style = "width: 100%; margin: 0 auto;">
-
-    <div class = "footer">
-      <div class = "contactInfo">
-        <div class = "item">
-          <img src="../media/EmailIcon.png" alt="Email" style="width: 10%; border: none;"/>
-          <p>&ensp;<a href="mailto:evanpgray.work@gmail.com" style="text-decoration: none; color: inherit;">evanpgray.work@gmail.com</a>&emsp;</p>
-        </div>
-        <div class = "item">
-          <img src="../media/PhoneIcon.png" alt="Phone" style="width: 14%; border: none;"/>
-          <p>&ensp;+1 (425) 213-7629</p>
-        </div>
-      </div>
-      <div class = "links">
-        <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo" /> </a>
-        <!-- <a href="https://thecabbageknight.itch.io/" target="_blank" rel="noopener noreferrer"> <img src="media/ItchLogo.png" alt="Itch Logo" /> </a> -->
+    <div class = "footerLoadingZone" id="../footer.html">
+      <!--Footer will get autoloaded here :D -->
     </div>
   </body>
 </html>
