--- a/footer.html
+++ b/footer.html
@@ -3,15 +3,15 @@
 <div class = "footer">
   <div class = "contactInfo">
     <div class = "item">
-      <img src="../media/EmailIcon.png" alt="Email" style="width: 2vw; border: none;"/>
+      <img src="../media/EmailIcon.png" alt="Email" style="width: calc(1.8vw + 0.4rem);; border: none;"/>
       <p>&ensp;<a href="mailto:evanpgray.work@gmail.com" style="text-decoration: none; color: inherit;">evanpgray.work@gmail.com</a>&emsp;</p>
     </div>
     <div class = "item">
-      <img src="../media/PhoneIcon.png" alt="Phone" style="width: 2vw; border: none; margin-left: 4vw;"/>
+      <img src="../media/PhoneIcon.png" alt="Phone" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 4vw;"/>
       <p>&ensp;+1 (425) 213-7629</p>
     </div>
   </div>
   <div class = "links">
-    <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo"/> </a>
+    <a href="https://www.linkedin.com/in/evanpatrickgray" target="_blank" rel="noopener noreferrer"> <img src="../media/LinkedInLogo.png" alt="LinkedIn Logo" style="width: calc(1.8vw + 0.4rem); height: calc(1.8vw + 0.4rem); border: none;"/> </a>
   </div>
 </div>
