--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     <title>Evan Gray | About</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="../aboutStyles.css">
+    <link rel="stylesheet" type="text/css" href="aboutStyles.css">
     <link rel="stylesheet" type="text/css" href="../headerStyles.css">
     <link rel="stylesheet" type="text/css" href="../footerStyles.css">
     <link rel="stylesheet" type="text/css" href="../fonts.css">
