--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
     <title>Evan Gray | Resume</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="../resumeStyles.css">
+    <link rel="stylesheet" type="text/css" href="resumeStyles.css">
     <link rel="stylesheet" type="text/css" href="../headerStyles.css">
     <link rel="stylesheet" type="text/css" href="../footerStyles.css">
     <link rel="stylesheet" type="text/css" href="../fonts.css">
