Switched to absolute paths, moved overlap

--- a/codesamples/index.html
+++ b/codesamples/index.html
@@ -1,103 +1,8 @@
 <!--__________________________________________________________________________________________________________-->
-<!--____________________________________________CODE SAMPLES PAGE_____________________________________________-->
+<!--____________________________________________CODE SAMPLES BASE PAGE________________________________________-->
 <!--__________________________________________________________________________________________________________-->
-<!DOCTYPE html>
-<html> 
-  <!-- ---------------------------------------------------------------------------- -->
-  <!-- ------------------------------------Head------------------------------------ -->
-  <!-- ---------------------------------------------------------------------------- -->
-  <head>
-    <title>Evan Gray | Code Samples</title>
 
-    <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="codeSampleStyles.css">
-    <link rel="stylesheet" type="text/css" href="../headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../fonts.css">
-
-    <!-- Set icon -->
-    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
-
-    <!-- Connect javascript functions -->
-    <script type="text/javascript" src="../functions.js"></script>
-
-    <!-- Link to the google code-prettify library styles -->
-    <script type="text/javascript" src="../googlePrettify/prettify.js"></script>
-
-    <!-- Load footer into this file-->
-    <!-- Also Load code snippets on page load and run prettify on them -->
-    <script> 
-      window.onload = function() 
-      {
-        loadCode('overlap.cpp');
-        loadHTML('../footer.html');
-      }; 
-    </script>
-  </head>
-
-  <!-- ---------------------------------------------------------------------------- -->
-  <!-- ------------------------------------Body------------------------------------ -->
-  <!-- ---------------------------------------------------------------------------- -->
-
-  <body>
-    <!-- ~~~~~~~~~~~Header~~~~~~~~~~~ -->
-    <div class = "header" style="background-color: black;">
-      <div class = "title">
-        Evan Gray       
-      </div>
-      <div class = "buttons">
-        <button class= " button" onclick = "window.location.href = '../'">Projects</button>
-        <button class= " button" onclick = "window.location.href = '../resume/'">Resume</button>
-        <button class= " button" onclick = "location.reload()">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = '../about/'">About</button>
-        <button class= " button" onclick = "scrollToFooter()">Contact</button>
-      </div>
-    </div>
-    <hr style = "width: 100%; margin: 0 0; border: 0.01vw solid white;">
-
-    <!-- ~~~~~~~~~~~Code Samples~~~~~~~~~~~ -->
-    <div class = "codeTitle">
-      <h1>Overlapping Rectangles</h1>
-    </div>
-    <div class = "codeSnippet" id="codeSnippet">
-      <div class = "codeLoadingZone" id="overlap.cpp">
-        <!-- Code snippet will get autoloaded here :D -->
-      </div>
-      <div class = "codeDescription">
-<h2>Overview:</h2>
-<p>This code determines how many cells in a grid are covered by a specific number of overlapping rectangle, using a sweep line algorithm to avoid processing every cell individually. In given test cases the grid can be as large as 10^9*10^9, and contain up to 10^5 rectangles. The output is a map indicating how many cells are covered by exactly 𝐶 rectangles, modulo 7001.</p>
-
-
-<h2>Details:</h2>
-<p>1. Input Processing:</p>
-<div class="inset">
-<p>The code begins by reading rectangle data from a file. Each rectangle is defined by its top-left corner (<code>x₁, y₁</code>) and bottom-right corner (<code>x₂, y₂</code>). For each rectangle, two events are created:</p>
-<ul><li>A start event at <code>y₁</code>, for a rectangle covering the x-range [<code>x₁, x₂</code>].</li>
-<li>An end event at <code>y₂ + 1</code>, for a rectangle un-covering the x-range [<code>x₁, x₂</code>].</li></ul>
-<p>These events are stored in a multimap, which automatically sorts them by their y-coordinates. This ensures that the sweep line processes the events in the correct order, moving from top to bottom.</p>
-</div>
-<p>2. Sweep Line Algorithm:</p>
-<div class="inset">
-<p>The algorithm uses a "sweep line" to move down the grid and process events. It keeps track of overlap counts dynamically, avoiding the need to check every cell.</p>
-<p>Tracking Overlaps:</p>
-<div class="insetDeep"><p>A data structure called <code>LineData</code> keeps track of the number of overlaps at each x-coordinate using a vector. Additionally, it uses a hash map to count how many x-coordinates share the same overlap value (e.g., "10 x-coordinates have an overlap count of 1").</p></div>
-<p>Processing Events:</p>
-<div><ul><li>For a start event, the overlap count for all x-coordinates in the range [<code>x₁, x₂</code>] is incremented.</li>
-<li>For an end event, the overlap count for the same range is decremented.</li>
-<li>After adjusting overlap counts, the hash map is updated to reflect the new distribution of overlap counts.</li></ul></div> 
-<p>Calculating Area Contributions:</p>
-<div class="insetDeep"><p>Between events, the algorithm calculates the total area contributed by each overlap count. This is done by multiplying the number of x-coordinates with a specific overlap count by the vertical distance (difference in y-coordinates) between consecutive events. These contributions are added to the final result map, with all calculations performed modulo 7001 to prevent overflow.</p></div> 
-<p>Efficiency:</p>
-<div class="insetDeep"><p>The algorithm processes only the edges of rectangles (start and end events) and updates overlap counts directly, making it efficient even for large inputs.</p></div> 
-</div>
-<h3>3. Output:</h3>
-<div class="inset"><p>The final output is a map where the keys are overlap counts, and the values indicate the total area covered by those counts, modulo 7001. (e.g., 500 cells with 0 overlaps, 230 cells with 1 overlaps, ect.) This approach ensures the solution is scalable and avoids unnecessary computations.</p></div>
-      </div>
-    </div>
-
-    <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="../footer.html">
-      <!--Footer will get autoloaded here :D -->
-    </div>
-  </body>
-</html>
+<script>
+  //Redirect to the projects page
+  window.location.href = "/codesamples/overlap/";
+</script>
