--- a/projects/index.html
+++ b/projects/index.html
@@ -11,20 +11,20 @@
 
     <!-- Link to the external stylesheets -->
     <link rel="stylesheet" type="text/css" href="projectsStyles.css">
-    <link rel="stylesheet" type="text/css" href="../headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../fonts.css">
+    <link rel="stylesheet" type="text/css" href="/headerStyles.css">
+    <link rel="stylesheet" type="text/css" href="/footerStyles.css">
+    <link rel="stylesheet" type="text/css" href="/fonts.css">
     
     <!-- Set icon -->
-    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
 
     <!-- Connect javascript functions -->
-    <script type="text/javascript" src="../functions.js"></script>
+    <script type="text/javascript" src="/functions.js"></script>
 
     <!-- Load footer into this file-->
     <script> window.onload = function() 
       {
-        loadHTML('../footer.html');
+        loadHTML('/footer.html');
       }; 
     </script>
   </head>
@@ -41,9 +41,9 @@
       </div>
       <div class = "buttons">
         <button class= " button" onclick = "location.reload()">Projects</button>
-        <button class= " button" onclick = "window.location.href = '../resume/'">Resume</button>
-        <button class= " button" onclick = "window.location.href = '../codesamples/'">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = '../about/'">About</button>
+        <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
+        <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
+        <button class= " button" onclick = "window.location.href = '/about/'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
     </div>
@@ -52,7 +52,7 @@
     <div class = "videoContainer">
       <div class = "video">
         <video autoplay muted loop>
-          <source src="../media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
+          <source src="/media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
         </video>
       </div>
       
@@ -60,7 +60,7 @@
       </div>
 
       <div class = "videoImage">
-        <button class="imageButton" onclick = "window.location.href = 'KnightLight.html'"> <img src="../media/KnightLightLogo.png" alt="KnightLight Game Logo" /> </button>
+        <button class="imageButton" onclick = "window.location.href = 'KnightLight.html'"> <img src="/media/KnightLightLogo.png" alt="KnightLight Game Logo" /> </button>
       </div>
 
       <div class = "videoText">
@@ -80,7 +80,7 @@
     </div>
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="../footer.html">
+    <div class = "footerLoadingZone" id="/footer.html">
       <!--Footer will get autoloaded here :D -->
     </div>
   </body>
