--- a/resume/index.html
+++ b/resume/index.html
@@ -11,20 +11,20 @@
 
     <!-- Link to the external stylesheets -->
     <link rel="stylesheet" type="text/css" href="resumeStyles.css">
-    <link rel="stylesheet" type="text/css" href="../headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="../fonts.css">
+    <link rel="stylesheet" type="text/css" href="/headerStyles.css">
+    <link rel="stylesheet" type="text/css" href="/footerStyles.css">
+    <link rel="stylesheet" type="text/css" href="/fonts.css">
 
     <!-- Set icon -->
-    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
 
     <!-- Connect javascript functions -->
-    <script type="text/javascript" src="../functions.js"></script>
+    <script type="text/javascript" src="/functions.js"></script>
 
     <!-- Load footer into this file-->
     <script> window.onload = function() 
       {
-        loadHTML('../footer.html');
+        loadHTML('/footer.html');
       }; 
     </script>
   </head>
@@ -40,10 +40,10 @@
         Evan Gray       
       </div>
       <div class = "buttons">
-        <button class= " button" onclick = "window.location.href = '../'">Projects</button>
+        <button class= " button" onclick = "window.location.href = '/'">Projects</button>
         <button class= " button" onclick = "location.reload()">Resume</button>
-        <button class= " button" onclick = "window.location.href = '../codesamples/'">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = '../about/'">About</button>
+        <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
+        <button class= " button" onclick = "window.location.href = '/about/'">About</button>
         <button class= " button" onclick = "scrollToFooter()">Contact</button>
       </div>
     </div>
@@ -55,7 +55,7 @@
     </div>
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="../footer.html">
+    <div class = "footerLoadingZone" id="/footer.html">
       <!--Footer will get autoloaded here :D -->
     </div>
   </body>
