--- a/codesamples/opengl-computeshader/index.html
+++ b/codesamples/opengl-computeshader/index.html
@@ -1,5 +1,5 @@
 <!--__________________________________________________________________________________________________________-->
-<!--________________________________________OVERLAP CODE SAMPLES PAGE_________________________________________-->
+<!--___________________________________OPENGL_COMPSHADER CODE SAMPLES PAGE____________________________________-->
 <!--__________________________________________________________________________________________________________-->
 <!DOCTYPE html>
 <html> 
@@ -29,7 +29,7 @@
     <script> 
       window.onload = function() 
       {
-        loadCode('overlap.cpp');
+        loadCode('computeshader.cpp');
         loadHTML('/footer.html');
       }; 
     </script>
@@ -57,12 +57,12 @@
 
     <!-- ~~~~~~~~~~~Tabs~~~~~~~~~~ -->
     <div class = "tabrow">
-      <button class="tab" onclick = "location.reload()">
+      <button class="tabinactive" onclick = "window.location.href = '/codesamples/overlap'">
         <div class = "codeTitle">
           <h1>Overlapping Rectangles</h1>
         </div>
       </button>
-      <button class = "tabinactive" onclick = "window.location.href = '/codesamples/opengl-computeshader'">
+      <button class = "tab" onclick = "location.reload()">
         <div class = "codeTitle">
           <h1>OpenGL Compute Shaders</h1>
         </div>
@@ -77,39 +77,44 @@
 
     <!-- ~~~~~~~~~~~Code Sample~~~~~~~~~~~ -->
     <div class = "codeSnippet" id="codeSnippet">
-      <div class = "codeLoadingZone" id="overlap.cpp">
+      <div class = "codeLoadingZone" id="computeshader.cpp">
         <!-- Code snippet will get autoloaded here :D -->
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code determines how many cells in a grid are covered by a specific number of overlapping rectangles with a sweep line algorithm to avoid processing every cell individually. In given test cases the grid can be as large as 10^9*10^9, and contain up to 10^5 rectangles. The output is a map indicating how many cells are covered by exactly 𝐶 rectangles, modulo 7001.</p>
+<p>This code provides an abstraction layer for OpenGL compute shaders. It allows the creation, management, and execution of compute shaders through a series of functions. This implementation manages resources like buffers, textures, and uniforms, and provides efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, and handle GPU memory and data binding efficiently.</p>
 
 
 <h2>Details:</h2>
 <p>Input Processing:</p>
 <div class="inset">
-<p>The code begins by reading rectangle data from a file. Each rectangle is defined by its top-left corner (<code>x₁, y₁</code>) and bottom-right corner (<code>x₂, y₂</code>). For each rectangle, two events are created:</p>
-<ul><li>A start event at <code>y₁</code>, for a rectangle covering the x-range [<code>x₁, x₂</code>].</li>
-<li>An end event at <code>y₂ + 1</code>, for a rectangle un-covering the x-range [<code>x₁, x₂</code>].</li></ul>
-<p>These events are stored in a multimap, which automatically sorts them by their y-coordinates. This ensures that the sweep line processes the events in the correct order, moving from top to bottom.</p>
+<p>The constructor of the ComputeShader class reads the shader source code from a file and compiles it into a program. The ParseShader function is responsible for reading the file and returning the shader source code as a string.</p>
+<p>The shader code is then passed to CreateShader, which compiles the shader and links it into a program.</p>
 </div>
-<p>Sweep Line Algorithm:</p>
+<p>Shader Dispatching:</p>
 <div class="inset">
-<p>The algorithm uses a "sweep line" to move down the grid and process events. It keeps track of overlap counts dynamically, avoiding the need to check every cell.</p>
-<p>Tracking Overlaps:</p>
-<div class="insetDeep"><p>A data structure called <code>LineData</code> keeps track of the number of overlaps at each x-coordinate using a vector. Additionally, it uses a hash map to count how many x-coordinates share the same overlap value (e.g., "10 x-coordinates have an overlap count of 1").</p></div>
-<p>Processing Events:</p>
-<div><ul><li>For a start event, the overlap count for all x-coordinates in the range [<code>x₁, x₂</code>] is incremented.</li>
-<li>For an end event, the overlap count for the same range is decremented.</li>
-<li>After adjusting overlap counts, the hash map is updated to reflect the new distribution of overlap counts.</li></ul></div> 
-<p>Calculating Area Contributions:</p>
-<div class="insetDeep"><p>Between events, the algorithm calculates the total area contributed by each overlap count. This is done by multiplying the number of x-coordinates with a specific overlap count by the vertical distance (difference in y-coordinates) between consecutive events. These contributions are added to the final result map, with all calculations performed modulo 7001 to prevent overflow.</p></div> 
-<p>Efficiency:</p>
-<div class="insetDeep"><p>The algorithm processes only the edges of rectangles (start and end events) and updates overlap counts directly, making it efficient even for large inputs.</p></div> 
+<p>The Dispatch function sends the compute shader to the GPU for execution, specifying the workgroup size and whether a memory barrier is needed. A memory barrier ensures that memory operations are completed in the correct order.</p>
+<p>The Bind and Unbind functions manage the shader program during the execution, ensuring it is used when needed and releasing it afterward.</p>
 </div>
-<h3>Output:</h3>
-<div class="inset"><p>The final output is a map where the keys are overlap counts, and the values indicate the total area covered by those counts, modulo 7001. (e.g., 500 cells with 0 overlaps, 230 cells with 1 overlaps, ect.) This approach ensures the solution is scalable and avoids unnecessary computations.</p></div>
-      </div>
+<p>Buffer and Texture Management:</p>
+<div class="inset">
+<p>The BindTexture function binds textures to the compute shader, enabling the shader to read from it.</p>
+<p>The GenBuffer function creates a new buffer on the GPU, and BindBuffer is used to upload data to that buffer and bind it for use in the shader.</p>
+<p>The ReadBuffer function allows reading the results of a compute shader from a buffer after execution.</p>
+<p>The DeleteBuffer function ensures buffers are cleaned up when no longer needed.</p>
+</div>
+<p>Uniform Management:</p>
+<div class="inset">
+<p>Uniforms are used to pass values to the shader. The SetUniform functions handle setting various types of uniforms (e.g., float, vector, array) by checking if the uniform data needs updating and then sending it to the GPU.</p>
+<p>The GetUniformLocation function retrieves the location of a uniform in the shader program, caching it for efficiency.</p>
+<p>Additional helper functions like checkUniformMap ensure that uniforms are only updated when their values change, which prevents unnecessary GPU communication and improves performance.</p>
+</div>
+<p>Error Handling and Debugging:</p>
+<div class="inset">
+<p>The code includes error handling, especially during shader compilation and linking. If errors occur, detailed messages are logged.</p>
+<p>In debug mode, the shader compilation and program linking processes are carefully checked, and failure logs are produced with specific error messages.</p>
+</div>
+       </div>
     </div>
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
